# MoltChat

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: docs.yml  release.yml
.knowledge/: MChat适配OpenClaw技术方案.md  产品使用手册.md  产品需求方案-评审纪要.md  产品需求方案.md  技术设计方案.md  讨论.md
admin/: README.md  index.html  package-lock.json  package.json  vite.config.js
admin/src/: App.tsx  Layout.tsx  index.css
admin/src/context/: MqttContext.tsx
admin/src/mqtt/: api.ts
admin/src/pages/: Departments.tsx  Employees.tsx  Groups.tsx  Login.tsx  OrgTree.tsx  Settings.tsx
client/android/app/: build.gradle.kts
client/android/docs/: debug-android-logs.md  gateway-ws-interaction-review.md
client/ios/MoltChat/: MChatRuntime.swift  SecurePrefs.swift
client/node/: README.md  package-lock.json  package.json
client/node/docs/: 技术方案.md
client/node/example/: README.md  index.js  package.json
client/node/src/: api.ts  client.ts  index.ts  types.ts
client/python/: README.md  pyproject.toml
client/python/example/: README.md  main.py
client/python/src/mchat_client/: __init__.py  api.py  client.py
docs/: index.md  quickstart.md  产品使用手册.md  消息交互接口与示例.md
docs/api/: auth.md  convention.md  index.md  management.md  messaging.md  status-and-ext.md
docs/guide/: admin.md  emqx-public-broker.md  faq.md  index.md  intro.md  scenarios.md  user.md
docs/integration/: openclaw.md
docs/sdk/: common.md  index.md  node.md  python.md
server/: README.md  package-lock.json  package.json
server/config/: config.sample.yaml
server/src/: config.ts  index.ts  types.ts
(+51 files in other folders)
